# Battleships

./: CMakeLists.txt  ULM.md  UML.md  main.cpp
src/: BattleshipAI.cpp  BattleshipAI.h  GameEngine.cpp  GameEngine.h  Map.cpp  Map.h  TextureManager.cpp  TextureManager.h
src/UI/: Button.cpp  Button.h  Sprite.cpp  Sprite.h  UI.cpp  UI.h  UIElements.h
